separate generic config and zones

--- a/config/dnsmasq.conf
+++ b/config/dnsmasq.conf
@@ -7,9 +7,10 @@ log-queries
 # server=8.8.8.8
 # server=1.1.1.1
 # server=1.0.0.1
-addn-hosts=/etc/hosts.conf
-addn-hosts=/etc/hosts2.conf
+addn-hosts=/etc/zones/hosts.conf
+addn-hosts=/etc/zones/hosts2.conf
 strict-order
+domain=home.lab
 #explicitly define host-ip mappings
 #address=/apps/10.0.10.102
 #address=/services/10.0.10.101
