--- a/compose.yaml
+++ b/compose.yaml
@@ -1,13 +1,12 @@
 services:
   DNS_dnsmasq:
     container_name: DNS_dnsmasq
-    image: strm/dnsmasq
+    image: horna-home-lab/dnsmasq
+    build: .
     restart: unless-stopped
     volumes:
       - ./config/dnsmasq.conf:/etc/dnsmasq.conf
-      - ./config/resolv.conf:/etc/resolv.conf
-      - ./config/hosts.conf:/etc/hosts.conf
-      - ./config/hosts2.conf:/etc/hosts2.conf
+      - ./zones/:/etc/zones/
     ports:
       - "53:53/udp"
       - "53:53/tcp"
